# gloria-fuertes

./: .gitignore  .pdm-python  404.html  LICENSE  README.md  index.html  pyproject.toml  sitemap.xml
.github/workflows/: publicar.yml  website.yml
about/: index.html
electronica/: index.html
materiales/: index.html
search/: search_index.json
software/: index.html
src/: .env.example  Dockerfile  docker-compose.yml
src/nodered/: .gitignore
src/nodered/data/: flows.json  settings.js
website/: .gitignore  README.md  mkdocs.yml  requirements.txt
website/docs/: about.md  electronica.md  index.md  materiales.md  software.md
website/docs/js/: mathjax.js
