[project]
name = "gloria-fuertes"
version = "0.1.0"
description = "Homenaje a la gran Gloria Fuertes por parte de La Jaqueria"
authors = [
    {name = "La Jaquería", email = "lajaqueria@gmail.com"},
]
dependencies = [
    "mkdocs-material == 9.5.15",
    "mkdocs-glightbox == 0.3.7",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"


[tool.pdm]
distribution = true
